--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap-vue": "^2.1.0",
     "cloudinary-vue": "^1.1.2",
     "core-js": "^3.6.5",
+    "onsenui": "^2.10.10",
     "vue": "^2.6.11",
+    "vue-onsenui": "^2.6.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
